Fix horizontal scroll problem

--- a/style.css
+++ b/style.css
@@ -1,15 +1,28 @@
 :root {
-  --font-sans: "Calibre", "San Francisco", "SF Pro Text", -apple-system,
+  --font-sans: 'Calibre', 'San Francisco', 'SF Pro Text', -apple-system,
     system-ui, sans-serif;
-  --font-mono: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+  --font-mono: 'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', monospace;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  box-sizing: border-box;
   scrollbar-width: thin;
   scrollbar-color: rgb(185, 185, 185) transparent;
+}
+
+*::-webkit-scrollbar {
+  width: 5px;
+}
+*::-webkit-scrollbar-track {
+  background: black;
+}
+*::-webkit-scrollbar-thumb {
+  background: rgb(185, 185, 185);
+  border-radius: 20px;
+  border: transparent;
 }
 
 html {
@@ -27,7 +40,7 @@ body {
     from(#222222),
     to(#000000)
   );
-
+  overflow-x: hidden;
   background: linear-gradient(to left, #222222, #000000);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
@@ -91,61 +104,34 @@ p span {
   justify-content: center;
   align-items: center;
   font-size: 14px;
-
 }
 
 .email-link:hover {
   background: rgba(255, 255, 255, 0.1);
 }
 
-.socials{
+.socials {
   position: fixed;
-  bottom: 0; 
+  bottom: 0;
   left: 50px;
 }
 
-.socials ul{
+.socials ul {
   list-style-type: none;
 }
 
-.social-item.icon{
+.social-item.icon {
   width: 25px;
   margin: 20px;
-  transition: transform .2s, color .2s;
+  transition: transform 0.2s, color 0.2s;
   cursor: pointer;
 }
 
-.socials:last-child{
+.socials:last-child {
   margin-bottom: 0;
 }
 
-.social-item:last-child{
-    display: block;
-    width: 1px;
-    height: 90px;
-    margin: 0px auto;
-    background-color: lightgray;
-}
-
-.social-item svg{
-  color: lightgray;
-}
-
-.social-item.icon:hover{
-  transform: translateY(-2px);
-}
-
-.social-item.icon:hover svg{
-  color: white;
-}
-
-.mail{
-  position: fixed;
-  bottom: 0; 
-  right: 50px;
-}
-
-.line{
+.social-item:last-child {
   display: block;
   width: 1px;
   height: 90px;
@@ -153,48 +139,74 @@ p span {
   background-color: lightgray;
 }
 
-.mail a{
-    writing-mode: vertical-rl;
-    color: lightgray;
-    text-decoration: none;
-    font-family: var(--font-mono);
-    margin-bottom: 15px;
-    font-size: 12px;
+.social-item svg {
+  color: lightgray;
 }
 
-.navbar{
+.social-item.icon:hover {
+  transform: translateY(-2px);
+}
+
+.social-item.icon:hover svg {
+  color: white;
+}
+
+.mail {
+  position: fixed;
+  bottom: 0;
+  right: 50px;
+}
+
+.line {
+  display: block;
+  width: 1px;
+  height: 90px;
+  margin: 0px auto;
+  background-color: lightgray;
+}
+
+.mail a {
+  writing-mode: vertical-rl;
+  color: lightgray;
+  text-decoration: none;
+  font-family: var(--font-mono);
+  margin-bottom: 15px;
+  font-size: 12px;
+}
+
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 90px;
   padding: 0 50px;
 }
 
-.links{
+.links {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 500px
+  width: 500px;
 }
 
-.links .nav-item{
+.links .nav-item {
   color: lightgray;
   font-family: var(--font-mono);
   font-size: 13px;
   cursor: pointer;
-  transition : color 0.1s;
+  transition: color 0.1s;
   text-decoration: none;
 }
 
-.links .nav-item:hover{
+.links .nav-item:hover {
   color: white;
 }
 
-.navbar .email-link{
+.navbar .email-link {
   height: 40px;
   margin-top: 0;
   display: flex;
@@ -204,7 +216,7 @@ p span {
   font-size: 13px;
 }
 
-.logo{
+.logo {
   padding: 5px;
   color: white;
   border: 1px solid white;
@@ -215,12 +227,12 @@ p span {
   text-decoration: none;
 }
 
-
-#about, #skills, #projects{
+#about,
+#skills,
+#projects {
   width: 100vw;
   height: 100vh;
 }
-
 
 @media screen and (max-width: 600px) {
   html {
